
[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "single-cell-explorer"
version = "0.1.0"
dependencies = [
    "streamlit",
    "scanpy",
    "anndata",
    "matplotlib",
    "seaborn",
    "numpy",
    "plotly",
    "leidenalg",
    "louvain",
    "gdown",
    "python-igraph"
    "pandas>=1.1,<2.2"
]
